SERVER-17886 Don't call Request::getns() if message doesn't include ns

(cherry picked from commit 32eb4dbe6fb78f7697f72b1406f1d8efaaedd378)