src/mongo/s/request.cpp
@@ -90,7 +90,7 @@ namespace mongo {
         int msgId = (int)(_m.header()->id);
 
         Timer t;
-        LOG(3) << "Request::process begin ns: " << getns()
+        LOG(3) << "Request::process begin ns: " << getnsIfPresent()
                << " msg id: " << msgId
                << " op: " << op
                << " attempt: " << attempt
@@ -130,7 +130,7 @@ namespace mongo {
             // globalOpCounters are handled by write commands.
         }
 
-        LOG(3) << "Request::process end ns: " << getns()
+        LOG(3) << "Request::process end ns: " << getnsIfPresent()
                << " msg id: " << msgId
                << " op: " << op
                << " attempt: " << attempt
