src/mongo/s/request.h
@@ -52,6 +52,9 @@ namespace mongo {
         const char * getns() const {
             return _d.getns();
         }
+        const char* getnsIfPresent() const {
+            return _d.messageShouldHaveNs() ? _d.getns() : "";
+        }
         int op() const {
             return _m.operation();
         }
